# sovereignty

./: .gitignore  .pip-audit-ignore  BUILD.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.es.md  README.fr.md  README.hi.md  README.it.md  README.ja.md  README.md  README.pt-BR.md  README.zh.md  SCORECARD.md  SECURITY.md  SHIP_GATE.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md
.github/workflows/: ci.yml  pages.yml  publish.yml  release-binaries.yml  release.yml
app/: .gitignore  biome.json  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
app/src/: App.test.tsx  App.tsx  main.tsx
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/.cargo/: audit.toml
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: commands.rs  config.rs  daemon.rs  lib.rs  main.rs
app/src/components/: ConfirmDialog.module.css  ConfirmDialog.test.tsx  ConfirmDialog.tsx  DaemonDisconnectedBanner.module.css  DaemonDisconnectedBanner.test.tsx  DaemonDisconnectedBanner.tsx  EmptyState.module.css  EmptyState.test.tsx  EmptyState.tsx  EventFeed.module.css  EventFeed.test.tsx  EventFeed.tsx  ExpandableRow.module.css  ExpandableRow.test.tsx  ExpandableRow.tsx  LoadingSpinner.module.css  LoadingSpinner.test.tsx  LoadingSpinner.tsx  PanicModal.module.css  PanicModal.test.tsx  PanicModal.tsx  Pill.module.css  Pill.test.tsx  Pill.tsx  PlayerCard.module.css  PlayerCard.test.tsx  PlayerCard.tsx  RoundTimeline.module.css  RoundTimeline.test.tsx  RoundTimeline.tsx
app/src/hooks/: useDaemon.test.tsx  useDaemon.tsx  useDaemonEvents.hook.test.tsx  useDaemonEvents.test.ts  useDaemonEvents.ts  useGameState.test.tsx  useGameState.ts  useVerifyFlow.test.tsx  useVerifyFlow.ts
app/src/lib/: daemonClient.test.ts  daemonClient.ts  errorFormat.ts  invoke.ts  url.test.ts  url.ts  verifyDisplay.test.ts  verifyDisplay.ts
app/src/routes/: Audit.module.css  Audit.test.tsx  Audit.tsx  Game.module.css  Game.test.tsx  Game.tsx  Index.module.css  Index.test.tsx  Index.tsx  Settings.module.css  Settings.test.tsx  Settings.tsx
app/src/styles/: globals.css  globals.test.ts  theme.css
app/src/test/: anchor-status-wire-shape.test.ts  msw-handlers.ts  proofs-wire-shape.test.ts
app/src/types/: css-modules.d.ts  daemon.test.ts  daemon.ts  game.ts
assets/print/: deal-cards.md  event-cards.md  player-mat.md  quick-ref.md  treaty-quick-ref.md
assets/print/source/: Board A - Parchment Heritage.html  README.md  Sovereignty Print Pack - print.html  Sovereignty Print Pack.html  artifact-cards.jsx  artifact-player-mat.jsx  board-a.jsx  (+9 more)
docs/: cli-json-output.md  league_night.md  migration-v1-to-v2.md  multi-save.md  play-with-strangers.md  play_night_kit.md  print-and-play.md  roadmap.md  start_here.md  v2.1-bridge-changes.md  v2.1-daemon-ipc.md  v2.1-roadmap.md  v2.1-tauri-shell.md  v2.1-views.md  v2.2-backlog.md  visual-language.md
docs/board/: board_v1.md
docs/cards/: deals_v1.md  events_v1.md
docs/postcards/: README.md  cozy-example.md  economic-example.md  spicy-example.md
docs/rules/: campfire_v1.md  market_day_v1.md  town_hall_v1.md  treaty_table_v1.md
docs/scenarios/: CANON.md  README.md  _TEMPLATE.md  cozy-night.md  market-panic.md  promises-matter.md  treaty-night.md
scripts/: check-theme-tokens.sh  check-voice.sh  verify.sh
site/: astro.config.mjs  package-lock.json  package.json
site/src/: site-config.ts
sov_cli/: __init__.py  __main__.py  errors.py  main.py
sov_daemon/: __init__.py  __main__.py  auth.py  events.py  lifecycle.py  log_fields.py  server.py
sov_engine/: __init__.py  content.py  hashing.py  io_utils.py  models.py  proof.py  rng.py  schemas.py  serialize.py
sov_engine/rules/: __init__.py  campfire.py  market_day.py  town_hall.py  treaty_table.py
sov_transport/: __init__.py  base.py  null.py  xrpl.py  xrpl_async.py  xrpl_internals.py  xrpl_testnet.py
tests/: conftest.py  test_active_game_resolution.py  test_anchor_batch.py  test_anchor_cli.py  test_anchor_contract.py  test_backend_amend_wave6.py  test_backtick_rendering.py  test_bridge_amend_wave11.py  test_cli_amend_wave9.py  test_cli_empty_states.py  test_cli_help_no_placeholders.py  test_cli_integration.py  test_daemon_amend_wave11.py  test_daemon_amend_wave7.py  test_daemon_amend_wave9.py  test_daemon_auth.py  test_daemon_cors.py  test_daemon_endpoints.py  test_daemon_lifecycle.py  test_daemon_readonly.py  test_daemon_seed_leak.py  test_daemon_sse.py  test_daemon_types_ts_in_sync.py  test_deals.py  test_doctor_summary.py  test_engine.py  test_error_hints_have_commands.py  test_errors.py  test_errors_hint_backticks.py  test_errors_registry_no_inline_codes.py  test_fund_dev_wallet.py  test_game_types_ts_in_sync.py  test_load_proof_errors.py  test_log_contracts.py  test_market_day.py  test_models.py  test_multi_save.py  test_pending_anchors.py  test_proof_anchor_status.py  test_proofs.py  (+22 more)
(+13 files in other folders)
