[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sovereignty-game"
version = "2.2.0"
description = "A strategy game about governance, trust, and trade — offline tabletop + XRPL online verification."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "mcp-tool-shop", email = "64996768+mcp-tool-shop@users.noreply.github.com" },
]
keywords = ["game", "board-game", "xrpl", "web3", "governance", "trust"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Games/Entertainment :: Board Games",
]
dependencies = [
    "typer>=0.9",
    "rich>=13.0",
]

[project.optional-dependencies]
xrpl = ["xrpl-py>=2.0,<5.0"]
daemon = [
    "starlette>=0.36,<2.0",
    "uvicorn[standard]>=0.27,<1.0",
    "httpx>=0.27,<1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23,<2.0",
    "pytest-httpserver>=1.0,<2.0",
    "ruff>=0.6",
    "mypy>=1.10",
]

[project.scripts]
sov = "sov_cli.main:app"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "xrpl.*"
ignore_missing_imports = true
# xrpl-py 3.x ships no PEP 561 stubs as of 2026-04-30.
# Remove this override when xrpl-py publishes a py.typed marker
# or when a third-party stubs package is available on PyPI.

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: real-network tests requiring RUN_INTEGRATION=1 environment variable to opt in",
]
# Filter third-party DeprecationWarnings so the CI ``-W error`` filter
# catches our own deprecations without tripping on transitive deps.
# uvicorn 0.46 imports websockets.legacy + websockets.server which were
# deprecated in websockets 14.0 — surfaces as a hard error during the
# SSE fixture's uvicorn-startup path. Filter at the warnings level so
# individual asserts still run.
filterwarnings = [
    "ignore::DeprecationWarning:websockets",
    "ignore::DeprecationWarning:websockets.legacy",
    "ignore::DeprecationWarning:uvicorn.protocols.websockets.websockets_impl",
]

[tool.hatch.build.targets.wheel]
packages = ["sov_engine", "sov_transport", "sov_cli"]
