[package]
name = "sov-tauri-shell"
version = "2.1.0"
edition = "2021"
description = "Sovereignty Tauri 2 desktop shell — daemon discovery + lifecycle bridge"
license = "MIT"

[lib]
name = "sov_tauri_shell"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "sov-tauri-shell"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["process", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
